# fastapi-otel

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/fastapi_otel/: main.py
